--- a/ArboretoCarmeloPalma/app/src/main/res/layout/list_service_item.xml
+++ b/ArboretoCarmeloPalma/app/src/main/res/layout/list_service_item.xml
@@ -9,7 +9,7 @@
     tools:layout_editor_absoluteY="81dp">
 
     <ImageView
-        android:id="@+id/icon_image"
+        android:id="@+id/icon_service"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
@@ -18,10 +18,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/ic_menu_events"
+        android:background="@drawable/ic_menu_services"
         app:srcCompat="@drawable/circle"
         tools:srcCompat="@drawable/circle"
-        android:contentDescription="@string/menu_events"/>
+        android:contentDescription="@string/menu_services"/>
 
 
     <TextView
@@ -31,26 +31,26 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/menu_events"
+        android:text="@string/menu_services"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/date_text"
+        app:layout_constraintBottom_toTopOf="@+id/desc_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/icon_image"
+        app:layout_constraintStart_toEndOf="@+id/icon_service"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/date_text"
+        android:id="@+id/desc_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/menu_events"
+        android:text="@string/menu_services"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/divider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/icon_image"
+        app:layout_constraintStart_toEndOf="@+id/icon_service"
         app:layout_constraintTop_toBottomOf="@+id/title_text" />
 
 
@@ -61,7 +61,7 @@
         android:background="?android:attr/listDivider"
         tools:layout_editor_absoluteX="17dp"
         tools:layout_editor_absoluteY="55dp"
-        app:layout_constraintTop_toBottomOf="@+id/date_text"
+        app:layout_constraintTop_toBottomOf="@+id/desc_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
