--- a/ArboretoCarmeloPalma/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ArboretoCarmeloPalma/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,10 @@
             android:id="@+id/nav_services"
             android:icon="@drawable/ic_menu_services"
             android:title="@string/menu_services" />
+
+        <item
+            android:id="@+id/nav_events"
+            android:icon="@drawable/ic_menu_events"
+            android:title="@string/menu_events" />
     </group>
 </menu>
