--- a/ArboretoCarmeloPalma/app/src/main/res/navigation/mobile_navigation.xml
+++ b/ArboretoCarmeloPalma/app/src/main/res/navigation/mobile_navigation.xml
@@ -33,6 +33,12 @@
         tools:layout="@layout/fragment_services" />
 
     <fragment
+        android:id="@+id/nav_events"
+        android:name="ni.edu.uca.moviles2.arboretocarmelopalma.ui.events.EventsFragment"
+        android:label="@string/menu_events"
+        tools:layout="@layout/fragment_events" />
+
+    <fragment
         android:id="@+id/nav_info_tree"
         android:name="ni.edu.uca.moviles2.arboretocarmelopalma.ui.trees.TreeInfoFragment"
         android:label="@string/menu_trees"
